kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: work
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: installnginx
        image: olegtoshchev/ng1nx:v0.1
        ports:
        - containerPort: 8000
        readinessProbe:
         httpGet:
          path: /index.html
          port: 8000
         initialDelaySeconds: 5
         periodSeconds: 10
        volumeMounts:
        - name: mydir
          mountPath: /homework
        - name: configmap-volume
          mountPath: /homework/conf
        lifecycle:
          preStop:
            exec:
              command: ["rm", "-f", "/homework/index.html"]
      volumes:
      - name: mydir
        persistentVolumeClaim:
          claimName: pvc-k8s
      - name: configmap-volume
        configMap:
         name: cm-k8s
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
